--- a/front-end/loja/package.json
+++ b/front-end/loja/package.json
@@ -18,8 +18,10 @@
     "@mui/material": "^5.14.2",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
+    "cross-fetch": "^4.0.0",
     "date-fns": "^2.30.0",
     "material-ui-confirm": "^3.0.9",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -39,8 +41,12 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.6.2",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-localstorage-mock": "^2.4.26",
     "jsdom": "^22.1.0",
+    "msw": "^1.2.3",
     "vite": "^4.4.5",
-    "vitest": "^0.34.1"
+    "vitest": "^0.34.1",
+    "vitest-localstorage-mock": "^0.0.1"
   }
 }
